examples/tests/semantic/fail/wrongWhileBody.tig
let 
    var taylor := "taylor"
in 
    while taylor = "taylor" do 
        "taylor"
end 